<resources>
    <string name="app_name">Healthy Economy</string>
    <string name="abrirRegistarUtilizador">Registo</string>
    <string name="digite_a_sua_morada">Digite a sua morada</string>
    <string name="data_criacao">Digite a data de criação</string>
    <string name="você_tem_filho">Você tem filho?</string>
    <string name="iv_image">Imagem</string>
    <string name="item_configuracoes">Configurações</string>
    <string name="item_sair">Sair</string>
    <string name="navigation_drawer_open">Abrir desenho de navegação</string>
    <string name="navigation_drawer_close">Fechar desenho de navegação</string>
    <string name="descricao">Descrição</string>
    <string name="adicione_a_descricao">Adicione a descrição</string>
    <string name="selecione_a_data">Selecione a Data</string>
    <string name="valor_gasto">Valor Gasto</string>
    <string name="insira_o_valor">Insira o Valor</string>
    <string name="data">Data</string>
    <string name="inserir">Inserir</string>
    <string name="visualizar">Visualizar</string>

    <array name="Categorias">
        <item>Alimentação</item>
        <item>Bares e Restaurantes</item>
        <item>Casa</item>
        <item>Compras</item>
        <item>Cuidados Pessoais</item>
        <item>Educação</item>
        <item>Família e Filhos</item>
        <item>Lazer e hobbies</item>
        <item>Mercado</item>
        <item>Presentes</item>
        <item>Pets</item>
        <item>Transporte</item>
        <item>Trabalho</item>
        <item>Seguro</item>
        <item>Viagem</item>
    </array>

    <array name="Mês">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </array>
    <string name="title_activity_navegacacao">NavegacacaoActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_casa">Casa</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_quest">Questionário</string>
    <string name="menu_gastoP">Gastos Próprios</string>
    <string name="menu_gastoC">Gastos Categoria</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_informacao">Informação</string>
    <string name="menu_contatos">Contatos</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>