<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_m_principal"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_m_perfil"
            android:title="@string/menu_perfil" />

        <item
            android:id="@+id/nav_questionario"
            android:icon="@drawable/ic_m_quest"
            android:title="@string/menu_quest" />

        <item
            android:id="@+id/nav_gastosP"
            android:icon="@drawable/ic_m_gastosp"
            android:title="@string/menu_gastoP" />

        <item
            android:id="@+id/nav_gastosC"
            android:icon="@drawable/ic_m_categoria"
            android:title="@string/menu_gastoC" />
    </group>

    <item android:title="Como posso te ajudar?">
        <menu>
            <item
                android:id="@+id/nav_contatos"
                android:icon="@drawable/ic_m_contatos"
                android:title="@string/menu_contatos" />
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_m_chat2"
                android:title="@string/menu_chat" />
            <item
                android:id="@+id/nav_informacao"
                android:icon="@drawable/ic_m_info"
                android:title="@string/menu_informacao" />


        </menu>
    </item>

</menu>