<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">
    <fragment
        android:id="@+id/nav_principal"
        android:name="com.example.healthyeconomy.ui.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.healthyeconomy.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/nav_questionario"
        android:name="com.example.healthyeconomy.ui.respQuestionario.QuestionarioFragment"
        android:label="@string/menu_quest"
        tools:layout="@layout/fragment_questionario" />
    <fragment
        android:id="@+id/nav_gastosP"
        android:name="com.example.healthyeconomy.ui.gastosProprios.GastosPropriosFragment"
        android:label="@string/menu_gastoP"
        tools:layout="@layout/fragment_gastos_proprios" />
    <fragment
        android:id="@+id/nav_gastosC"
        android:name="com.example.healthyeconomy.ui.gastosCategoria.GastosCategoriaFragment"
        android:label="@string/menu_gastoC"
        tools:layout="@layout/fragment_gastos_categoria" />
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.healthyeconomy.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/nav_informacao"
        android:name="com.example.healthyeconomy.ui.informacao.InformacaoFragment"
        android:label="@string/menu_informacao"
        tools:layout="@layout/fragment_informacao" />


</navigation>