<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#246265"
    android:gravity="center"
    tools:context=".GastosPropiosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Spinner
            android:id="@+id/spiner_Categorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="24dp"
            android:padding="10dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="28sp" />


        <TextView
            android:id="@+id/tv_decricacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="@string/descricao"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_regitar_decricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/adicione_a_descricao"
            android:inputType="textPersonName"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="@string/valor_gasto"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_registar_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/insira_o_valor"
            android:inputType="numberDecimal"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:text="@string/data"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_data_gasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:hint="@string/selecione_a_data"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btn_inserirGastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/inserir"
            app:backgroundTint="#03A9F4" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>